<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/frame_activity_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        android:background="@color/red">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/red_bg_img" />

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/shop" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_activity_login"
        android:orientation="vertical">

        <com.example.myshopeeukotlin.utils.MSPTextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/tittle_login"
            android:textColor="@color/ColorPrimaryText"
            android:textSize="@dimen/title_textSize" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_hint_email_id"
            android:textColorHint="@color/ColorSecondaryText">

            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize"
                tools:text="abc@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_hint_password"
            android:textColorHint="@color/ColorSecondaryText">

            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize"
                tools:text="123456" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.myshopeeukotlin.utils.MSPTextViewBold
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/lbl_forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/ColorSecondaryText"
            android:textSize="@dimen/forget_password_textSize"></com.example.myshopeeukotlin.utils.MSPTextViewBold>

        <com.example.myshopeeukotlin.utils.MSPButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_login" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_linear_layout"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"

        android:orientation="horizontal">

        <com.example.myshopeeukotlin.utils.MSPTextView
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/ColorPrimaryText"
            android:textSize="@dimen/lbl_text_view_textSize" />

        <com.example.myshopeeukotlin.utils.MSPTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/ColorSecondaryText"

            android:textSize="@dimen/lbl_text_view_textSize" />
    </LinearLayout>

</RelativeLayout>