<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:orientation="vertical">

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar_register_activity"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize">
       <com.example.myshopeeukotlin.utils.MSPTextViewBold
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:paddingStart="@dimen/toolbar_title_paddingStart"
           android:paddingEnd="0dp"
           android:text="@string/create_an_account"
           android:textColor="@color/ColorPrimaryText"
           android:textSize="@dimen/toolbar_title_text_size"
           />
   </androidx.appcompat.widget.Toolbar>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_first_name"
            android:textColorHint="@color/ColorSecondaryText">
            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize">
            </com.example.myshopeeukotlin.utils.MSPEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_last_name"
            android:textColorHint="@color/ColorSecondaryText">
            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize">
            </com.example.myshopeeukotlin.utils.MSPEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/et_hint_email_id"
            android:textColorHint="@color/ColorSecondaryText">
            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize">
            </com.example.myshopeeukotlin.utils.MSPEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/et_hint_password"
            android:textColorHint="@color/ColorSecondaryText">
            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize">
            </com.example.myshopeeukotlin.utils.MSPEditText>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/et_hint_password"
            android:textColorHint="@color/ColorSecondaryText">
            <com.example.myshopeeukotlin.utils.MSPEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/et_textSize">
            </com.example.myshopeeukotlin.utils.MSPEditText>

        </com.google.android.material.textfield.TextInputLayout>

<LinearLayout
    android:id="@+id/ll_terms_and_condition"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center|left"

    >
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_terms_and_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:gravity="center|right"
        android:layout_gravity="left"
        android:layout_marginStart="45dp">


    </androidx.appcompat.widget.AppCompatCheckBox>
    <com.example.myshopeeukotlin.utils.MSPTextView
        android:id="@+id/tv_terms_condition"

        android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
        android:text="@string/i_agree_to_the_terms_and_condition"
        android:textSize="@dimen/txt_terms_and_condition_textSize"

        android:textColor="@color/ColorSecondaryText"
        android:layout_marginTop="14dp"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
        <com.example.myshopeeukotlin.utils.MSPButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/login_linear_layout"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"

            android:orientation="horizontal">

            <com.example.myshopeeukotlin.utils.MSPTextView
                android:id="@+id/tv_don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="@dimen/lbl_text_view_textSize" />

            <com.example.myshopeeukotlin.utils.MSPTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/ColorSecondaryText"

                android:textSize="@dimen/lbl_text_view_textSize" />
        </LinearLayout>



    </LinearLayout>

</ScrollView>
</LinearLayout>

